# PRNG

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: CMakeLists.txt  get_results.py  main.cpp  p_value_uniform.py  utils.hpp
charts/: CMakeLists.txt  charts.py  main.cpp  utils.hpp
generators/: CMakeLists.txt
generators/include/generators/: base_error.hpp  generator.hpp  lagged_fibonacci_generator.hpp  linear_congruential_engine.hpp  linear_congruential_generator.hpp  linear_generator.hpp  mersenne_twister.hpp  mersenne_twister_involutio.hpp  mersenne_twister_involution.hpp  mersenne_twister_rotr.hpp  mersenne_twister_sbox.hpp  mersenne_twister_sbox_and_involution.hpp  mersenne_twister_sbox_and_rotr.hpp  mersenne_twister_simd.hpp  mersenne_twister_siphash.hpp  well_generator.hpp
generators/include/hash_functions/: siphash.hpp
generators/src/: base_error.cpp  lagged_fibonacci_generator.cpp  linear_congruential_engine.cpp  linear_congruential_generator.cpp  mersenne_twister_simd.cpp  well_generator.cpp
metrics/: CMakeLists.txt
metrics/include/metrics/: binary_matrix.hpp  diehard_const.hpp  diehard_tests.hpp  nist_tests.hpp  utils.hpp
metrics/include/statistical_test/: diehard.hpp  nist.hpp  statistical_test.hpp
metrics/src/: binary_matrix.cpp  diehard.cpp  diehard_tests.cpp  nist.cpp  nist_tests.cpp  statistical_test.cpp  utils.cpp
tests/: CMakeLists.txt
tests/LCG/: CMakeLists.txt  LCG.cpp  lcg_tests.cpp
tests/LFG/: CMakeLists.txt  LFG.cpp
tests/MT/: CMakeLists.txt  mt_tests.cpp
tests/WELL/: CMakeLists.txt  well_tests.cpp
tests/first/: CMakeLists.txt  first.cpp  main.cpp
tests/metrics/: CMakeLists.txt  binary_matrix.cpp  data.e  diehard_tests.cpp  e.txt  metrics.cpp  nist_tests.cpp  random.txt  utils_tests.cpp
